HUSTLER | BUG_FIX | Implemented Idempotency in Anomalies