@@ -4,6 +4,7 @@ import com.ashirvad.platform.pnl.model.PnlRecord;
 import com.ashirvad.platform.pnl.repository.PnlRecordRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -11,10 +12,8 @@ import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 @Service
 public class PnlIngestionServiceImpl implements PnlIngestionService {
@@ -26,8 +25,10 @@ public class PnlIngestionServiceImpl implements PnlIngestionService {
     }
 
     @Override
+    @Transactional
     public Map<String, Integer> ingestPnlData(MultipartFile file) throws IOException {
-        List<PnlRecord> records = new ArrayList<>();
+        int recordsInserted = 0;
+        int recordsUpdated = 0;
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
             String line;
             boolean isHeader = true;
@@ -39,12 +40,27 @@ public class PnlIngestionServiceImpl implements PnlIngestionService {
                 String[] parts = line.split(",");
                 if (parts.length >= 4) {
                     try {
-                        PnlRecord record = new PnlRecord();
-                        record.setDate(LocalDate.parse(parts[0].trim(), DateTimeFormatter.ISO_LOCAL_DATE));
-                        record.setDesk(parts[1].trim());
-                        record.setProduct(parts[2].trim());
-                        record.setPnlAmount(new BigDecimal(parts[3].trim()));
-                        records.add(record);
+                        LocalDate date = LocalDate.parse(parts[0].trim(), DateTimeFormatter.ISO_LOCAL_DATE);
+                        String desk = parts[1].trim();
+                        String product = parts[2].trim();
+                        BigDecimal pnlAmount = new BigDecimal(parts[3].trim());
+
+                        Optional<PnlRecord> existingRecord = pnlRecordRepository.findByDateAndDeskAndProduct(date, desk, product);
+
+                        if (existingRecord.isPresent()) {
+                            PnlRecord recordToUpdate = existingRecord.get();
+                            recordToUpdate.setPnlAmount(pnlAmount);
+                            pnlRecordRepository.save(recordToUpdate);
+                            recordsUpdated++;
+                        } else {
+                            PnlRecord newRecord = new PnlRecord();
+                            newRecord.setDate(date);
+                            newRecord.setDesk(desk);
+                            newRecord.setProduct(product);
+                            newRecord.setPnlAmount(pnlAmount);
+                            pnlRecordRepository.save(newRecord);
+                            recordsInserted++;
+                        }
                     } catch (Exception e) {
                         // Log or ignore invalid rows
                         System.err.println("Skipping invalid row: " + line + " Error: " + e.getMessage());
@@ -53,10 +69,6 @@ public class PnlIngestionServiceImpl implements PnlIngestionService {
             }
         }
 
-        if (!records.isEmpty()) {
-            pnlRecordRepository.saveAll(records);
-        }
-
-        return Collections.singletonMap("recordsInserted", records.size());
+        return Map.of("recordsInserted", recordsInserted, "recordsUpdated", recordsUpdated);
     }
 }
